# faster-qwen-tts-aio

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
app/: audio_utils.py  config.py  main.py  openai_api.py  tts_engine.py  voices.py  web.py  wyoming_server.py
app/static/: index.html
