[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faster-qwen-tts-aio"
version = "0.1.0"
description = "All-in-one TTS service wrapping faster-qwen3-tts with OpenAI-compatible API, Wyoming protocol, and a web UI."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "faster-qwen3-tts>=0.2.6",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "python-multipart>=0.0.12",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "soundfile>=0.12.1",
  "numpy>=1.26.0",
  "wyoming>=1.8.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["static/*"]
